smokeping (2.3.6-4) UNRELEASED; urgency=low

  * Add missing build-dependency on cpio. (Closes: #537026)

 -- Niko Tyni <ntyni@debian.org>  Thu, 16 Jul 2009 22:29:38 +0300

smokeping (2.3.6-3) unstable; urgency=low

  * Unset LC_ALL in the init script because the daemon needs to 
    reset LC_NUMERIC. (Closes: #489766)
  * Fix a bashism in the postinst script. Thanks, lintian.

 -- Niko Tyni <ntyni@debian.org>  Fri, 29 Aug 2008 18:29:34 +0300

smokeping (2.3.6-2) unstable; urgency=low

  * Kill speedy_backend processes that are running on stop (Closes: #485880)

 -- Jose Carlos Garcia Sogo <jsogo@debian.org>  Wed, 02 Jul 2008 00:30:34 +0200

smokeping (2.3.6-1) unstable; urgency=low

  * New upstream release.
    + honours the 'linkstyle' variable when zooming. (Closes: #476404)
  * Wait until the daemon has exited when stopping it with the init.d script.
    This should fix a race condition that made restarts fail sporadically.
    (Closes: #478241)

 -- Niko Tyni <ntyni@debian.org>  Mon, 28 Apr 2008 21:49:28 +0300

smokeping (2.3.5-2) unstable; urgency=low

  * Prevent an unnecessary ucf prompt for the Slaves section on upgrades.
  * Upload to unstable.

 -- Niko Tyni <ntyni@debian.org>  Fri, 04 Apr 2008 08:47:24 +0300

smokeping (2.3.5-1) experimental; urgency=low

  * New upstream release. (Closes: #470295)
    + debian/patches/30_slave_piddir.dpatch: removed, included upstream.
    + new dependency on libdigest-hmac-perl
  * Revisit the directory permissions of various directories under /var.
    See also NEWS.Debian.
    + use /var/lib/smokeping/__cgi as a storage place for the CGI.
      (Closes: #470382)
    + debian/postinst: 
      * set the right permissions on install
      * move *.adr files under __cgi on upgrade
  * honour DAEMON_ARGS from /etc/default/smokeping even in slave mode.
  * Remove the example target hierarchy 'World' from the default configuration
    file, so that no unnecessary directories are created in the CGI directory.