@@ -52,10 +52,6 @@ install: build-stamp
 	install -d $(TMP)/usr/share/perl5/smokeping/Smokeping/sorters
 	install -m 644 lib/Smokeping/sorters/*pm $(TMP)/usr/share/perl5/smokeping/Smokeping/sorters
 
-	install -d $(TMP)/usr/share/perl5/smokeping/Config/Grammar
-	install -m 644 lib/Config/*pm $(TMP)/usr/share/perl5/smokeping/Config/
-	install -m 644 lib/Config/Grammar/*pm $(TMP)/usr/share/perl5/smokeping/Config/Grammar
-
 	install -d $(TMP)/usr/sbin/
 	install -m 755 bin/smokeping.dist $(TMP)/usr/sbin/smokeping
 	install -m 755 bin/tSmoke.dist $(TMP)/usr/sbin/tSmoke
@@ -107,7 +103,8 @@ install: build-stamp
 	for s in 1 3 5 7;\
 	do\
 		install -d $(TMP)/usr/share/man/man$$s;\
-		for f in `find doc/ -name \*.$$s` ; do install -m 644 $$f $(TMP)/usr/share/man/man$$s; done ; \
+		find doc -path doc/Config -prune -o \( -name \*.$$s -print \) | \
+		 while read f; do install -m 644 $$f $(TMP)/usr/share/man/man$$s; done ; \
 	done
 
 binary-indep: build install
